pre git public mod update, i'm just tired and the vanilla sudden patch got my nerves out

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1282,8 +1282,9 @@
 	tec_advanced_augmentation_external:0 "§CAdvanced Augmentation - External§!"
 	tec_advanced_augmentation_deck:0 "§CAdvanced Augmentation - Cyberdeck§!"
 
-	tec_unregulated_augmentation_deck:0 "§CUnregulated Augmentation§!"
-	tec_reclaimed_augmentation_deck:0 "§CReclaimed Augmentation§!"
+	tec_augmentation_unregulated:0 "§CUnregulated Augmentation§!"
+	tec_augmentation_reclaimed:0 "§CReclaimed Augmentation§!"
+	tec_augmentation_ritual:0 "§CRitual Augmentation§!"
 
 	tec_no_cybernetic_trait:0 "\n§R$trigger_tec_warning_red$Requires any degree of §YCybernetic§! Augmentation.§!"
 
@@ -1402,7 +1403,7 @@
 
 	trait_tec_cyborg_cortex_memory:0 "Neural Emulator"
 	trait_tec_cyborg_cortex_memory_desc:0 "§LA series of artificial interchange neural sub-webs co-reinforce the mind of this species, allocating thoughts at a higher speed between areas of the brain.§!"
-	trait_tec_cyborg_cortex_memory_effect:0 "§ECortex Modifiers:§!\n$tec_loc_minitab$Leader Negative traits: §G$@trait_tec_cyborg_cortex_memory_leader_neg_trait_rate$§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t2_energy_upk_high$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency of §YCortex§! modifiers increased by §G$@trait_tec_cyborg_cortex_memory_boost_rate$%§!\nUpkeep of §YCortex§! modifiers increased by §R$@tec_cyborg_module_t2_selfboost_tt$%§!"
+	trait_tec_cyborg_cortex_memory_effect:0 "§ECortex Modifiers:§!\n$tec_loc_minitab$Leader Negative traits: §G$@trait_tec_cyborg_cortex_memory_leader_neg_trait_rate$§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t2_energy_upk_high$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency of §YCortex§! modifiers increased by §G$@trait_tec_cyborg_cortex_memory_boost_rate_tt$%§!\nUpkeep of §YCortex§! modifiers increased by §R$@tec_cyborg_module_t2_selfboost_tt$%§!"
 	# ^ TODO ASCENSION increase bureaucrat and alike output base
 
 	trait_tec_cyborg_cortex_relic:0 "Relic Databank"
