removed experimental traits/debug decisions for git public mod

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -607,6 +607,11 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
  decision_tec_debug_planet_building_speed_tooltip:0 "$decision_tec_debug_planet_building_speed_desc$"
  modifier_tec_debug_planet_building_speed:0 "$decision_tec_debug_planet_building_speed$"
 
+ decision_tec_debug_planet_automodding:0 "z-DEBUG-Automodding (£planet£)"
+ decision_tec_debug_planet_automodding_desc:0 "Automodding maxxer"
+ decision_tec_debug_planet_automodding_tooltip:0 "Automodding maxxer"
+ modifier_tec_debug_planet_automodding:0 "$decision_tec_debug_planet_districts$"
+
  decision_tec_debug_planet_districts:0 "z-DEBUG-INCREASE SLOTS (£planet£)"
  decision_tec_debug_planet_districts_desc:0 "Increases max building slots and 100 district slots"
  decision_tec_debug_planet_districts_tooltip:0 "Increases max building slots and 100 district slots"
