ascension shenanigans V - SEMI STABLE - Added cyborg t1 spec extra traits

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1384,6 +1384,14 @@
 	trait_tec_cyborg_cortex_unity_desc:0 "§LSelf-communicated devices directly paired with the species central processor allow a fast input and output of complex thoughts.§!"
 	trait_tec_cyborg_cortex_unity_effect:0 "§ECortex Modifiers:§!\n$tec_loc_minitab$$tec_loc_unity$ from jobs: §G+$@trait_tec_cyborg_cortex_unity_res_rate_tt$%§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_cortex_tt$\nEfficiency and Upkeep of §YCortex§! modifiers increased by §Y$@tec_cyborg_main_t1_selfboost_tt$%§!"
 
+	trait_tec_cyborg_cortex_naval:0 "Naval Upstream"
+	trait_tec_cyborg_cortex_naval_desc:0 "§LMili-grade processors compose this implant, which allows an easier transmission of data across fleet-ground elements with increased efficiency.§!"
+	trait_tec_cyborg_cortex_naval_effect:0 "§ECortex Modifiers:§!\n$tec_loc_navalcap_from_jobs$: §G+$@trait_tec_cyborg_cortex_naval_navalcap_rate_tt$%§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_cortex_tt$\nEfficiency and Upkeep of §YCortex§! modifiers increased by §Y$@tec_cyborg_main_t1_selfboost_tt$%§!"
+
+	trait_tec_cyborg_cortex_amenities:0 "Motivational Augmentor"
+	trait_tec_cyborg_cortex_amenities_desc:0 "§LA batch of custom-tailored cybernetics replace part of these cyborgs main processor, reinforcing productive behaviour of useful maintenance and rstoration elements.§!"
+	trait_tec_cyborg_cortex_amenities_effect:0 "§ECortex Modifiers:§!\n$tec_loc_amenities_from_jobs$: §G+$@trait_tec_cyborg_cortex_amenities_boost_rate_tt$%§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_cortex_tt$\nEfficiency and Upkeep of §YCortex§! modifiers increased by §Y$@tec_cyborg_main_t1_selfboost_tt$%§!"
+
 	trait_tec_cyborg_cortex_ram:0 "Memory Boost"
 	trait_tec_cyborg_cortex_ram_desc:0 "§LAdditional redundant modules act as individual storage for augmentations, reducing the mental load associated with and excess of mechanical alteration.§!"
 	trait_tec_cyborg_cortex_ram_effect:0 "§ECortex Modifiers:§!\n$tec_loc_minitab$Leader Experience Gain: §G+$@trait_tec_cyborg_cortex_ram_xp_rate_tt$%§!\n$tec_loc_minitab$Pop Energy Upkeep: §R+$@tec_cyborg_module_t1_energy_upk$§!\n\n§EFeature:§! $tec_cybernetic_overcharge_tt$\nEfficiency of §YCortex§! modifiers increased by §G$@trait_tec_cyborg_cortex_ram_boost_rate_tt$%§!\nUpkeep of §YCortex§! modifiers increased by §R$@tec_cyborg_module_t1_selfboost_tt$%§!"
@@ -1466,6 +1474,10 @@
 	trait_tec_cyborg_external_worker:0 "Prosthetic Machinery"
 	trait_tec_cyborg_external_worker_desc:0 "§LMiniaturized industrial devices are integrated in the body of this species, generating a really effective way of developing basic tasks and general job output.§!"
 	trait_tec_cyborg_external_worker_effect:0 "§EExternal Modifiers:§!\n$tec_loc_minitab$$mod_planet_jobs_worker_produces_mult$: §G+$@trait_tec_cyborg_external_worker_boost_rate_tt$%§!\n$tec_loc_minitab$$mod_planet_jobs_worker_upkeep_mult$: §R+$@trait_tec_cyborg_external_worker_upkeep_rate_tt$%§!\n$tec_loc_minitab$$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk_tt$%§!\n\n§EFeature:§! $tec_cybernetic_overcharge_external_tt$\nEfficiency and Upkeep of §YExternal§! Cybernetic modifiers increased by §Y+$@tec_cyborg_main_t1_selfboost_tt$%§!"
+
+	trait_tec_cyborg_external_industrial:0 "Fusion Projectors"
+	trait_tec_cyborg_external_industrial_desc:0 "§LMicro-plasma industrial cutters are integrated in these cyborgs, being able to project highly dense streams of energy to refine or alter any material on demand.§!"
+	trait_tec_cyborg_external_industrial_effect:0 "§EExternal Modifiers:§!\n$tec_loc_minitab$Resources from $tec_loc_industrial_jobs$: §G+$@trait_tec_cyborg_external_industrial_boost_rate_tt$%§!\n$tec_loc_minitab$$MOD_ARMY_DAMAGE_MULT$: §G+$@trait_tec_cyborg_external_industrial_army_rate_tt$%§!\n$tec_loc_minitab$$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@tec_cyborg_module_t1_amenities_upk_tt$%§!\n\n§EFeature:§! $tec_cybernetic_overcharge_external_tt$\nEfficiency and Upkeep of §YExternal§! Cybernetic modifiers increased by §Y+$@tec_cyborg_main_t1_selfboost_tt$%§!"
 
 	trait_tec_cyborg_external_weaponry:0 "Integrated Weaponry"
 	trait_tec_cyborg_external_weaponry_desc:0 "§LHigh-potency weaponry is allocated inside this species body, allowing a fast deployment of hostile measures when under impending attack, or as reinforcement for aggressive actions.§!"
