--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -136,6 +136,7 @@
 	tec_loc_naval_capacity: "$tec_loc_naval_cap$"
 	tec_loc_navalcap_from_jobs:0 "$mod_pop_job_naval_mult$"
 	tec_loc_admin_cap: "£mod_country_admin_cap_add£ $MOD_COUNTRY_ADMIN_CAP_ADD$"
+	tec_loc_amenities_from_jobs:0 "$mod_pop_job_amenities_mult$"
 
 	tec_loc_jobs: "£job£ Jobs"
 	tec_loc_job: "£job£ Job"
