Ascension shenanigans VI - SEMI STABLE - Added cybernetic/replicant/etc upgrade transmission mechanic with placeholder vars - Added big/smol brain traits - note for myself when i check to remove local depo digital/bioware/psychic/etc events removal, digital at least has popped for ppl

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1180,13 +1180,13 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_size_diminute_effect:0 ""
 
 
-	trait_tec_smol_brain:0 "Neuronic Disjunction"
-	trait_tec_smol_brain_desc:0 "§LThe connectivity of this species neural system is highly inefficient, if not severed, which makes thought and rational processes incredibly difficult.§!"
-	trait_tec_smol_brain_effect:0 ""
+	trait_tec_small_brain:0 "Neuronic Disjunction"
+	trait_tec_small_brain_desc:0 "§LThe connectivity of this species neural system is highly inefficient, if not even severed, which makes thought and rational processes incredibly difficult. As side advantage, the necessary resources for maintaining their cerebral integrity are lower than usual.§!"
+	trait_tec_small_brain_effect:0 "$tec_identity_trait$\n\nBase $tec_loc_research_resources$ from Researchers: §R$@trait_tec_small_brain_researcher_rate$§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §R$@trait_tec_small_brain_experience_rate_tt$%§!\n$mod_tec_pop_upkeep_base_add$: §G$@trait_tec_small_brain_upkeep_rate$§!"
 
 	trait_tec_big_brain:0 "Oversized Encephalon"
-	trait_tec_big_brain_desc:0 "§LA massive cerebral matter is a common characteristic of this species, allowing more neural density without sacrifficing communication.§!"
-	trait_tec_big_brain_effect:0 ""
+	trait_tec_big_brain_desc:0 "§LA massive amount of cerebral matter is a common characteristic of this species, allowing more neural density without communicative sacrifices, at the expense of intense organo-energetic demands.§!"
+	trait_tec_big_brain_effect:0 "$tec_identity_trait$\n\nBase $tec_loc_research_resources$ from Researchers: §G+$@trait_tec_big_brain_researcher_rate$§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §G+$@trait_tec_big_brain_experience_rate_tt$%§!\n$mod_tec_pop_upkeep_base_add$: §R+$@trait_tec_big_brain_upkeep_rate$§!"
 
 	# Upkeeps
 	trait_tec_upkeep_ravenous:0 "Ravenous"
