--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1365,7 +1365,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_fantasy_sylvan:0 "Sylvan Eternity"
 	trait_tec_fantasy_sylvan_desc:0 "§LGifted with an unusually long lifespan, the appreciation of time for this species has led both to excellent and procrastination, with the former being the only accepted outcome when it comes to create, elaborate, discuss or produce anything, in a way no other species is remotely able to do.§!"
-	trait_tec_fantasy_sylvan_effect:0 "$tec_identity_trait$\n\nLeader Lifespan: §GImmortal§!\n§YBase Resource§! Output from £job£ All Jobs: §G+35%§!\n\nPopulation Creation Speed and Total Assimilation success: §R-60%§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §R-30%§!\n\n§HBase production from £job£ All Jobs scale with other modifiers§!\n"
+	trait_tec_fantasy_sylvan_effect:0 "$tec_identity_trait$\n\nLeader Lifespan: §GImmortal§!\n§YBase Resource§! Output from £job£ All Jobs: §G+$@trait_tec_fantasy_sylvan_job_rate_tt$%§!\n\nPopulation Creation Speed and Total Assimilation success: §R$@trait_tec_fantasy_sylvan_growth_rate_tt$%§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §R$@trait_tec_fantasy_sylvan_xp_rate_tt$%§!\n\n§HBase production from £job£ All Jobs scale with other modifiers§!\n"
 
 
 	trait_tec_fantasy_mimic:0 "Mirroring Mimicry"
