Ascension Shenanigans VII - UNSTABLE - Pre patch merge

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1186,7 +1186,7 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_big_brain:0 "Oversized Encephalon"
 	trait_tec_big_brain_desc:0 "§LA massive amount of cerebral matter is a common characteristic of this species, allowing more neural density without communicative sacrifices, at the expense of intense organo-energetic demands.§!"
-	trait_tec_big_brain_effect:0 "$tec_identity_trait$\n\nBase $tec_loc_research_resources$ from Researchers: §G+$@trait_tec_big_brain_researcher_rate$§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §G+$@trait_tec_big_brain_experience_rate_tt$%§!\n$mod_tec_pop_upkeep_base_add$: §R+$@trait_tec_big_brain_upkeep_rate$§!"
+	trait_tec_big_brain_effect:0 "$tec_identity_trait$\n\nBase $tec_loc_research_resources$ from Researchers: §G+$@trait_tec_big_brain_researcher_rate$§!\n$MOD_LEADER_SPECIES_EXP_GAIN$ and Upkeep: §Y+$@trait_tec_big_brain_experience_rate_tt$%§!\n$mod_tec_pop_upkeep_base_add$: §R+$@trait_tec_big_brain_upkeep_rate$§!"
 
 	# Upkeeps
 	trait_tec_upkeep_ravenous:0 "Ravenous"
