--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -53,25 +53,26 @@
 	TRAIT_TEC_OG_GOLDEN_TOUCH_EFFECT:0 "Population Growth and Assembly speed: §R-50%§!\nTotal Assimilation fail chance: §R+50%§!\n§YBase resource production from all £job£ jobs: §G+50%§!§!\n\nBase production §Hscale§! with other modifiers\n"
 
 	# Amenities use %
-	trait_tec_amenities_spartan:0 "Spartan"
-	trait_tec_amenities_spartan_desc:0 "§LThis species is completely adapted to an austere existence, trying to obtain the maximum out of even the harsher conditions.§!"
-	trait_tec_amenities_spartan_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §G-$@trait_tec_spartan_amenities_usage$§!\nArmy Health: §G+$@trait_tec_spartan_army_rate_tt$%§!"
+	trait_tec_amenities_rugged:0 "Rugged"
+	trait_tec_amenities_rugged_desc:0 "§LThis species is completely adapted to an austere existence, trying to obtain the maximum out of even the harsher conditions with incredible determination.§!"
+	trait_tec_amenities_rugged_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §G$@trait_tec_amenities_rugged_amenities_rate_tt$%§!\nArmy Health: §G+$@trait_tec_amenities_rugged_army_rate_tt$%§!"
 
 	trait_tec_amenities_delicate:0 "Delicate"
-	trait_tec_amenities_delicate_desc:0 "§LThe strange and fragile physio and psychology of this species makes them extremely dependant of external use of luxuries or extra basic necessities covered by regular maintenance.§!"
-	trait_tec_amenities_delicate_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_delicate_amenities_usage$§!\nArmy Health: §R-$@trait_tec_delicate_army_rate_tt$%§!"
+	trait_tec_amenities_delicate_desc:0 "§LThe strange and fragile physio and psychology of this species makes them extremely dependant of external use of extra helping elements or basic necessities, and submit to regular maintenance checks.§!"
+	trait_tec_amenities_delicate_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_delicate_amenities_rate_tt$§!\nArmy Health: §R$@trait_tec_amenities_delicate_army_rate_tt$%§!"
 
 	# Amenities use add
 	trait_tec_amenities_vigorous:0 "Vigorous"
 	trait_tec_amenities_vigorous_desc:0 "§LWhen it comes to existing, this species can adapt themselves to either favorable or spartan environments, with minimal maintenance, while enduring physically and mentally situations where others would fail.§!"
+	trait_tec_amenities_vigorous_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §G$@trait_tec_amenities_vigorous_amenities_add$§!\nArmy Health: §G+$@trait_tec_amenities_vigorous_army_rate_tt$%§!"
 
 	trait_tec_amenities_fragile:0 "Fragile"
 	trait_tec_amenities_fragile_desc:0 "§LThe way these organisms operate involve several specific caretaking and monitoring to avoid injuries, illness or mental ill-being, as they tend to fall into those with ease.§!"
-	trait_tec_amenities_fragile_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_fragile_amenities_add$§!\nArmy Damage: §R$@trait_tec_fragile_army_rate_tt$%§!"
+	trait_tec_amenities_fragile_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_fragile_amenities_add$§!\nArmy Damage: §R$@trait_tec_amenities_fragile_army_rate_tt$%§!"
 
 	trait_tec_amenities_diminished:0 "Diminished"
 	trait_tec_amenities_diminished_desc:0 "§LWhile not physically weak per se, this species require of extreme measures, practices and conditioning for surviving, as its organism is inherently difficult to maintain and prone to physical and mental illnesses.§!"
-	trait_tec_amenities_diminished_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_diminished_amenities_add$§!\nArmy Damage: §R$@trait_tec_diminished_army_rate_tt$%§!"
+	trait_tec_amenities_diminished_effect:0 "$tec_loc_pops$ $tec_loc_amenities$ Usage: §R+$@trait_tec_amenities_diminished_amenities_add$§!\nArmy Damage: §R$@trait_tec_amenities_diminished_army_rate_tt$%§!"
 
 	# CG upkeep
 	trait_tec_goods_upkeep_extreme:0 "Prodigal"
@@ -98,13 +99,13 @@
 	trait_tec_versatile_desc:0 "§LThis species can adapt and learn basically anything with ease, making them extremely effective at resolving any challenge or obstacle.§!\n"
 
 	trait_tec_incompetent:0 "Inept"
-	trait_tec_incompetent_desc:0 "§LSeems hard to imagine how a species managed to, somehow, evolve and even design spacefaring vessels with such a degree of completely messy behaviour and capabilities, but even with that handicap, they did.§!\n"
+	trait_tec_incompetent_desc:0 "§LSeems hard to imagine how a species managed to, somehow, evolve and even design space-faring vessels with such a degree of completely messy behavior and capabilities, but even with that handicap, they did.§!\n"
 
 	trait_tec_bioservant_versatile:0 "Bio-Versatile"
 	trait_tec_bioservant_versatile_desc:0 "§LThis species was designed to adapt and learn basically anything with ease, making them extremely effective at resolving any challenge or obstacle.§!\n"
 
 	trait_tec_bioservant_incompetent:0 "Bio-Incompetent"
-	trait_tec_bioservant_incompetent_desc:0 "§LSeems hard to imagine how a species was designed to be such inneficent, with a big degree of completely messy behaviour and capabilities, but...§!\n"
+	trait_tec_bioservant_incompetent_desc:0 "§LSeems hard to imagine how a species was designed to be such inefficient, with a big degree of completely messy behavior and capabilities, but...§!\n"
 
 	trait_tec_negative_research:0 "Irrational"
 	trait_tec_negative_research_desc:0 "§LSome may call this species irrational or basically dumb, but they really show a total disregard for basic knowledge or rational thinking, making complex thought and discussion unnerving.§!\n"
@@ -229,7 +230,7 @@
 
 # rare
 	trait_tec_machine_biomass:0 "Biomass Converters"
-	trait_tec_machine_biomass_desc:0 "§LIntegrated as a energy reprocessor, these units have a refuel system able to consume via nanorrobotics any organic matter around in case of energy shortage or just nominal recharge.§!\n"
+	trait_tec_machine_biomass_desc:0 "§LIntegrated as a energy reprocessor, these units have a refuel system able to consume via nanorobotics any organic matter around in case of energy shortage or just nominal recharge.§!\n"
 	TRAIT_TEC_BIOMASS_EFFECT:0 "$mod_planet_pops_robotics_food_upkeep_add$: §R+0.5§!\n$mod_planet_pops_robotics_energy_upkeep_add$: §G-0.5§!"
 
 	trait_tec_machine_biobrain:0 "Organic Processor"
@@ -237,7 +238,7 @@
 	TRAIT_TEC_BIOBRAIN_EFFECT:0 "$mod_planet_pops_robotics_food_upkeep_add$: §R+0.5§!"
 
 	trait_tec_machine_clockwork:0 "Clockwork Body"
-	trait_tec_machine_clockwork_desc:0 "§LThese machines are composed internally of a myriad of kinetic miniaturized clockwork systems, feeding a complex structure that amplifies the workflow and creates a network of energy-saving mechanics for single interfaces; even with the complexity of these systems, their movements seems laggy or extremely paced.§!\n"
+	trait_tec_machine_clockwork_desc:0 "§LThese machines are composed internally of a myriad of kinetic miniaturized clockwork systems, feeding a complex structure that amplifies the workflow and creates a network of energy-saving mechanics for single interfaces; even with the complexity of these systems, their movements seems ''laggy''' or extremely paced.§!\n"
 	TRAIT_TEC_CLOCKWORK_EFFECT:0 "$mod_planet_pops_robotics_minerals_upkeep_add$: §R+0.5§!\n$mod_planet_pops_robotics_energy_upkeep_add$: §G-0.75§!"
 
 	trait_tec_machine_aquatic:0 "Nautical Design"
