Disabled ascensions + fix for robot automod/automod shenanigans

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -261,6 +261,7 @@
 	tec_blank:0 ""
 	tec_error:0 "£trigger_no£ §RERROR§!"
 	tec_disabled_temporarely: "£trigger_tec_warning£§YTEMPORARILY DISABLED§!"
+	tec_disabled_temporarely_hotfix: "£trigger_tec_warning£§YTEMPORARILY DISABLED - Will be reenabled in a hotfix§!"
 	tec_disabled_todo: "£trigger_tec_warning£§YDISABLED - ONGOING WORK§!"
 
 	trigger_tec_warning:1 "£trigger_tec_warning£ "
