Necrotic armies + dlc gating of traits

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1124,13 +1124,16 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 
 	trait_tec_zombification:0 "Necrotic Zombification"
 	trait_tec_zombification_desc:0 "§LDeath doesn't mean an end for this species, as part of its population raise after its demise, haunting and preying upon the living or serving as mindless workforce, driven by the most basic instincts.§!"
-	trait_tec_zombification_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§! there is between a §G$@trait_tec_zombification_min_rate$%§! and §G$@trait_tec_zombification_max_rate$%§! chance, proportional to the number of pops on the planet, for succumb to ['concept_tec_zombification_icon', §R£job_purge Zombification§!] instantly.\n\nAllows the recruitment of §R£job_purge£ Feral Zombies§! armies."
+	trait_tec_zombification_effect:0 "$tec_identity_trait$\n\nEach time a pop of this species is §YGenerated§! there is between a §G$@trait_tec_zombification_min_rate$%§! and §G$@trait_tec_zombification_max_rate$%§! chance, proportional to the number of pops on the planet, for succumb to ['concept_tec_zombification_icon', §R£job_purge Zombification§!] instantly.\n\nAllows the recruitment of §R£job_purge£ $tec_zombified_army$§! armies."
 
  	concept_tec_zombification:0 "Zombification"
 	concept_tec_zombification_icon:0 "§R£job_purge Zombification§!"
 	concept_tec_zombification_help_icon:0 "£trigger_tec_question£"
 	concept_tec_zombification_desc:0 "The affected pop will gain the ['trait:trait_zombie'] trait.\nDepending on the number of §R£job_purge£ Zombie§! pops on the planet, the affected pop will intantly die instead (§Y1%§! chance per zombie pop, up to §R$@trait_tec_zombification_max_kill_chance$%§!)."
 
+	tec_zombified_army:0 "Necrotic Zombies Herd"
+	tec_zombified_army_plural:0 "Necrotic Zombies Herds"
+	tec_zombified_army_desc:0 "Whatever remains of this former living organic is no more as necrotization took away any productive or reedemable aspect out of it, now a wandering mindless carcass driven by undying hunger."
 
 	trait_tec_positive_thoughts:0 "Positivist"
 	trait_tec_positive_thoughts_desc:0 "§LThis species is able to find a light amongst an infinite empty void, and a song amongst a cascade of emptiness, always keeping positivity abroad.§!"
