nothing to see here

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -2835,24 +2835,13 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	civic_tec_hive_planet_ravagers_desc:0 "TO DO"
 	civic_tec_hive_planet_ravagers_tooltip:0 "This collective exhaust any colonized world, making it become §YDepleted§! over time, providing great £job£ §YProduction§! and £pop£ §YPop Generation§! bonuses to the collective until it is rendered near completely §YUninhabitable§!.\nDepleted planets have an immense additional $mod_terraforming_cost_mult$.\n\n"
 
-	civic_tec_hive_zealots:0 "Unitologist Chorus"
-	civic_tec_hive_zealots_desc:0 "TO DO"
-	civic_tec_hive_zealots_tooltip:0 "TO DO"
+	civic_tec_hive_brood_zealots:0 "Unitologist Chorus"
+	civic_tec_hive_brood_zealots_desc:0 "TO DO"
+	civic_tec_hive_brood_zealots_tooltip:0 "TO DO"
 
 # /
 
 # --------------- Cyberhive civics
-	civic_tec_hive_cybercluster_network:0 "Network Clusters"
-	civic_tec_hive_cybercluster_network_desc:0 "TO DO"
-	civic_tec_hive_cybercluster_network_tooltip:0 "TO DO"
-
-	civic_tec_hive_cybercluster_production:0 "Proficiency Clusters"
-	civic_tec_hive_cybercluster_production_desc:0 "TO DO"
-	civic_tec_hive_cybercluster_network_tooltip:0 "TO DO"
-
-	civic_tec_hive_cybercluster_construction:0 "Network Clusters"
-	civic_tec_hive_cybercluster_construction_desc:0 "TO DO"
-	civic_tec_hive_cybercluster_construction_tooltip:0 "TO DO"
 # /
 
 # --------------- Biohive civics
