--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2284,43 +2284,85 @@
  # Vanilla xd
  # /
  # Evolved
+	# Growth
 	civic_tec_hive_eusocial:0 "§G£tec_civic_ruler£§!Eusociality"
+	civic_tec_hive_eusocial_noicon:0 "Eusociality"
 	civic_tec_hive_eusocial_desc:0 "['concept_tec_brood_capital_civic']\n\nWhile united under the same consciousness, this species has evolved and thrived thanks to the mutual collaboration of every member of the hive, with a strong cooperative brood care, overlapping generations within a colony of adults, and a division of labor into reproductive and non-reproductive groups, creating specialized castes that propers a unitary development and prosperous future for every member."
 	civic_tec_hive_eusocial_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_broodqueen_drone£ Brood Progenitors§!\n- £building£ Capital Buildings replace §Yall§! their §Y$tec_loc_unity$ Drone§! jobs with a single ['concept_tec_ruler_job_tec_broodqueen_drone_icon'] and various ['concept_tec_ruler_job_tec_broodlord_drone_plural_icon'] increased by §Y$tec_loc_capital_tier$§! and §Y$tec_loc_planet_ascension_plural$§!.\n\n$tec_loc_c_unlocks_feature$ §H£mod_pop_growth_speed£ Mutual Structuring§!\n- Each §Y£job_tec_broodlord_drone£ $job_tec_broodlord_drone$§! increase the production and upkeep of the planet §Y£job_tec_broodqueen_drone£ $job_tec_broodqueen_drone$§!\nCreating an external source of £pop£ Pop Assembly will make £job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ produce a small amount of £mod_pop_growth_speed£ Pop growth instead.\n\n$tec_loc_c_restriction$ §RForbids§! £building£ Spawning Pools\n"
 
+	civic_tec_hive_brood_splicer_queens:0 "§G£tec_civic_ruler£§!Splicer Matriarchs"
+	civic_tec_hive_brood_splicer_queens_noicon:0 "§G£tec_civic_ruler£§!TO DO"
+	civic_tec_hive_brood_splicer_queens_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_splicer_queens_tooltip:0 "TO DO"
+	# capital provide a Splicer Empress, rest provide Splicer Matriarchs
+	# focus on genetics more than eusociality
+
+	# Output
 	civic_tec_hive_brood_overminds:0 "§G£tec_civic_ruler£§!Subservient Overminds"
+	civic_tec_hive_brood_overminds_noicon:0 "Subservient Overminds"
 	civic_tec_hive_brood_overminds_desc:0 "['concept_tec_brood_capital_civic']\n\nThis collective derivates a relatively high amount of control power to specificially control drones, which have the task to control all the lesser ones at a planetary scale. Generally this produces a remarked separation between castes of drones, conforming a strong but diversified collective."
 	civic_tec_hive_brood_overminds_tooltip:0 "$tec_loc_c_unlocks_job$ §H£job_tec_overmind_drone£ Overminds§!\n- £building£ Capital Buildings provide a single ['concept_tec_ruler_job_tec_overmind_drone_icon'].\n\n$tec_loc_c_unlocks_feature$ §H£unity£ Controlling Grasp§!\n- £job_patrol_drone£ §YAnti-Crime§! drones are twice as effective at reducing £crime£ §YDeviancy§!.\n\n$tec_loc_c_unlocks_feature$ §H£influence£ Hegemonic Influence§!\n- Can use ['concept_hegemony_federation'] Federation Type."
 	# Capitals add overminds, overmind changes its type based on colony type and boost jobs
 
-	civic_tec_hive_brood_overminds_cyborg:0 "§G£tec_civic_ruler£§!Subservient Adjutants"
-	civic_tec_hive_brood_overminds_cyborg_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
-	civic_tec_hive_brood_overminds_cyborg_tooltip:0 "TO DO"
+	civic_tec_hive_brood_overminds_cybernetic:0 "§G£tec_civic_ruler£§!Subservient Adjutants"
+	civic_tec_hive_brood_overminds_cybernetic_noicon:0 "Subservient Adjutants"
+	civic_tec_hive_brood_overminds_cybernetic_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_overminds_cybernetic_tooltip:0 "TO DO"
 	# Capitals add adjutants, adjutants changes its type based on colony type boosting the job
 
 	civic_tec_hive_brood_cerebrates:0 "§G£tec_civic_ruler£§!Controlling Cerebrates"
+	civic_tec_hive_brood_cerebrates_noicon:0 "Controlling Cerebrates"
 	civic_tec_hive_brood_cerebrates_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
 	civic_tec_hive_brood_cerebrates_tooltip:0 "TO DO"
 	# 1 High research/performance job, provided by a building - building type changes the type of cerebrate
 
-	civic_tec_hive_brood_cerebrates_cyborg:0 "§G£tec_civic_ruler£§!Supervision Clusters"
-	civic_tec_hive_brood_cerebrates_cyborg_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
-	civic_tec_hive_brood_cerebrates_cyborg_tooltip:0 "TO DO"
+	civic_tec_hive_brood_cerebrates_cybernetic:0 "§G£tec_civic_ruler£§!Supervision Clusters"
+	civic_tec_hive_brood_cerebrates_cybernetic_noicon:0 "Supervision Clusters"
+	civic_tec_hive_brood_cerebrates_cybernetic_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_cerebrates_cybernetic_tooltip:0 "TO DO"
 	# 1 High research/performance job, provided by a building - building type changes the type of cluster
 
+	# Change
+	civic_tec_hive_brood_proteans:0 "§G£tec_civic_ruler£§!Proteanic Collective"
+	civic_tec_hive_brood_proteans_noicon:0 "Proteanic Collective"
+	civic_tec_hive_brood_proteans_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_proteans_tooltip:0 "TO DO"
+	# Adaptation to adversity - job changes based on the planet/designation/etc
+
+	civic_tec_hive_brood_mutagenic:0 "§G£tec_civic_ruler£§!Mutagenic Evolvers"
+	civic_tec_hive_brood_mutagenic_noicon:0 "Mutagenic Evolvers"
+	civic_tec_hive_brood_mutagenic_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
+	civic_tec_hive_brood_mutagenic_tooltip:0 "TO DO"
+	# Allow Mutation Dens providing Mutalizers, Abathur-like playstyle adding bonuses/debuffs to pops as modifier (permanently, each x years evolves a pop)
+
+	# Aggro
 	civic_tec_hive_brood_swarmlords:0 "§G£tec_civic_ruler£§!Ascended Swarmlords"
+	civic_tec_hive_brood_swarmlords_noicon:0 "§G£tec_civic_ruler£§!Ascended Swarmlords"
 	civic_tec_hive_brood_swarmlords_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
 	civic_tec_hive_brood_swarmlords_tooltip:0 "TO DO"
 	# Capital provide swarmlords, military and increase output
 
-	civic_tec_hive_brood_norn_queens:0 "§G£tec_civic_ruler£§!TO DO"
-	civic_tec_hive_brood_norn_queens_desc:0 "['concept_tec_brood_capital_civic']\n\nTO DO"
-	civic_tec_hive_brood_norn_queens_tooltip:0 "TO DO"
-	# capital provide a Norn Empress, rest provide Norn Matriarchs
-	# focus on genetics more than eusociality
-	# 1 P
+	# Cyberhive
+	civic_tec_hive_brood_cyber_network:0 "§G£tec_civic_ruler£§!Network Clusters"
+	civic_tec_hive_brood_cyber_network_noicon:0 "Network Clusters"
+	civic_tec_hive_brood_cyber_network_desc:0 "TO DO"
+	civic_tec_hive_brood_cyber_network_tooltip:0 "TO DO"
 
+	civic_tec_hive_brood_cyber_production:0 "§G£tec_civic_ruler£§!Proficiency Clusters"
+	civic_tec_hive_brood_cyber_production_noicon:0 "Proficiency Clusters"
+	civic_tec_hive_brood_cyber_production_desc:0 "TO DO"
+	civic_tec_hive_brood_cyber_network_tooltip:0 "TO DO"
+
+	civic_tec_hive_brood_cyber_construction:0 "§G£tec_civic_ruler£§!Fabrication Clusters"
+	civic_tec_hive_brood_cyber_construction_noicon:0 "Fabrication Clusters"
+	civic_tec_hive_brood_cyber_construction_desc:0 "TO DO"
+	civic_tec_hive_brood_cyber_construction_tooltip:0 "TO DO"
  # /
+ # Biohive
+	civic_tec_hive_brood_bioshapers:0 "§G£tec_civic_ruler£§!Genospawned Brood"
+	civic_tec_hive_brood_bioshapers_noicon:0 "Genospawned Brood"
+	civic_tec_hive_brood_bioshapers_desc:0 "TO DO"
+	civic_tec_hive_brood_bioshapers_tooltip:0 "£building£ Capital Buildings replace some £job_synapse_drone£ £job_tec_network_drone£ Unity §YDrone§! jobs with £job_tec_genospawner_drone£ §Y$job_tec_genospawner_drone_plural$§!, which belong to a special drone category, §YBrood Drones§!.\n- $job_tec_genospawner_drone_effect_desc$\n\n£mod_pop_growth_speed£ Genospawned drones will automatically decline after a period of time has passed after their creation, or the planet surpass the genospawned drone capacity, which is increased by §Y20§! per capital tier, and for each built £building£ §YGene Pool§!.\n\n"
 # /
 
 # Hivemind brood Add Civics
@@ -2592,10 +2634,6 @@
 	civic_tec_hive_zombies:0 "Exanimated Serfage"
 	civic_tec_hive_zombies_desc:0 "A."
 	civic_tec_hive_zombies_tooltip:0 "Can build £building£ §Y$building_posthumous_employment_center$§!\n$job_reassigner_effect_desc$\n\nGrants access to the £building£ §Y$holding_reemployment_center$§! Holding\nDefeated organic Leviathans can sometimes be resurrected."
-
-	civic_tec_hive_bioshapers:0 "Genospawned Brood"
-	civic_tec_hive_bioshapers_desc:0 "TO DO"
-	civic_tec_hive_bioshapers_tooltip:0 "£building£ Capital Buildings replace some £job_synapse_drone£ £job_tec_network_drone£ Unity §YDrone§! jobs with £job_tec_genospawner_drone£ §Y$job_tec_genospawner_drone_plural$§!, which belong to a special drone category, §YBrood Drones§!.\n- $job_tec_genospawner_drone_effect_desc$\n\n£mod_pop_growth_speed£ Genospawned drones will automatically decline after a period of time has passed after their creation, or the planet surpass the genospawned drone capacity, which is increased by §Y20§! per capital tier, and for each built £building£ §YGene Pool§!.\n\n"
 	# /
 
 # --------------------------- Machine --------------------------------
