--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -19,7 +19,7 @@
 # §Y thisisyellow §!
 
 # --------------------------- MAINSCREEN -------------------------------- #DATE DATE DATE DATE
-	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.10 (§Y25-07-2024§!)"
+	TEC_EVOLVED_VERSION:0 "Evolved Version: v0.11a (§Y27-09-2024§!)"
 	# §RE X P E R I M E N T A L§!
 	TEC_EVOLVED_TOOLTIP:0 "§E$TEC_EVOLVED_TITLE$§!\n§Y$TEC_EVOLVED_STEAMLINK$§!\n$TEC_EVOLVED_REPORTS$\n\n$TEC_EVOLVED_DONATIONS$"
 	TEC_EVOLVED_TITLE:0 "Stellaris Evolved"
